# clbar

./: .gitignore  Cargo.toml  FEATURES.md  LICENSE  PKGBUILD  README.md  clbar.service  config.toml.example  install.sh
src/: clash_api.rs  config.rs  main.rs  models.rs  tray.rs
