[package]
name = "clbar"
version = "0.1.0"
edition = "2021"
authors = ["grey"]
description = "A lightweight system tray application for Hyprland to switch Clash proxy nodes"
license = "MIT"

[dependencies]
tray-icon = "0.19"
reqwest = { version = "0.12", features = ["json"] }
notify-rust = "4.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
toml = "0.8"
